@@ -1,1 +1,1 @@
-{ "version": "0.6" }
+{ "version": "0.6.1" }
